# langchain-mcp-server

./: .dockerignore  .env.example  DOCKER.md  Dockerfile  README.md  app.py  debug_health.py  docker-compose.yml  fastapi_server.py  fastapi_server_fixed.py  langchain_service.py  main.py  mcp_server.py  pyproject.toml  requirements.txt  run.py  test_app_no_mcp.py  test_health_function.py  test_langchain.py  test_no_mcp.py  test_server.py
docs/: API.md
scripts/: health_check.py  run_fastapi.py  run_mcp.py
src/: __init__.py  main.py
src/api/: fastapi_app.py  mcp_server.py
src/config/: logging.py  settings.py
src/models/: schemas.py
src/services/: langchain_service.py
src/utils/: exceptions.py  helpers.py
tests/: conftest.py  test_api.py  test_integration.py  test_services.py
